Commit before merge